# reddit-to-supabase-etl

./: .env.example  .gitignore  Makefile  README.md  config.yaml  pyproject.toml  reddit_sdk_spec.txt  requirements.txt
.github/workflows/: deploy-lambda.yml
data/: comments_20250930_025340.jsonl  comments_20250930_025621.jsonl  comments_20250930_025856.jsonl  posts_20250930_025340.jsonl  posts_20250930_025621.jsonl  posts_20250930_025856.jsonl  run_metrics_20250930_025340.json  run_metrics_20250930_025621.json  run_metrics_20250930_025856.json
deploy/: build.sh
deploy/lambda/: handler.py
deploy/scripts/: build_and_zip.sh  deploy.sh
project-reporter/: .gitignore  README.md  main.py
reports/: run_20250930_020017.md  run_20250930_020049.md  run_20250930_020259.md
schema/: README.md  erd.mmd
scripts/: llm_complete.sh
src/reddit_researcher/: cli.py  comments.py  config.py  io_streams.py  listings.py  normalizers.py  probe.py  reddit_client.py
src/reddit_researcher/apis/reddit/: README.md  adapter.py  comments.py
src/reddit_researcher/apis/supabase/: README.md  adapter.py  client.py  sink.py
src/reddit_researcher/cli/: README.md
src/reddit_researcher/config/: README.md  config.py
src/reddit_researcher/core/: README.md  normalizers.py  orchestrator.py  ports.py  probe.py  ratelimit.py  sink_supabase.py  telemetry.py
src/reddit_researcher/io/: README.md  io_streams.py
tests/: test_cli.py  test_listings_unit.py  test_normalizers.py  test_probe_smoke.py  test_ratelimit.py  test_reddit_client.py  test_sink_supabase.py  test_telemetry.py
(+1 files in other folders)
